--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Welcome to My Portfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f9;
+            color: #333;
         }
         header {
             background-color: #333;
@@ -30,11 +31,21 @@
             width: 100%;
             bottom: 0;
         }
-        a {
+        .projects .project {
+            margin-bottom: 20px;
+        }
+        .project img {
+            width: 100%;
+            height: auto;
+        }
+        .project h3 {
+            margin-top: 10px;
+        }
+        .contact a {
             color: #1a73e8;
             text-decoration: none;
         }
-        a:hover {
+        .contact a:hover {
             text-decoration: underline;
         }
     </style>
@@ -43,30 +54,44 @@
 
     <header>
         <h1>Welcome to My Portfolio</h1>
-        <p>This is a showcase of my projects and achievements.</p>
+        <p>This is a showcase of my projects.</p>
     </header>
 
-    <section>
+    <section id="about-me">
         <h2>About Me</h2>
-        <p>Hello! I'm Maksim Stroikin, a second-year engineering student at the University of Guelph. I specialize in software development and embedded systems. In my free time, I love working on personal projects and contributing to open-source communities.</p>
+        <p>Insert description here.</p>
     </section>
 
-    <section>
+    <section id="projects" class="projects">
         <h2>Projects</h2>
-        <ul>
-            <li><a href="#">Project 1 - JavaFX Two-Player Game</a></li>
-            <li><a href="#">Project 2 - Autonomous Vehicle</a></li>
-            <li><a href="#">Project 3 - Arduino-Based Pinball Machine</a></li>
-        </ul>
+        
+        <div class="project">
+            <h3>Project 1</h3>
+            <img src="project1-image.jpg" alt="Project 1 Image">
+            <p>Insert project description here.</p>
+        </div>
+
+        <div class="project">
+            <h3>Project 2</h3>
+            <img src="project2-image.jpg" alt="Project 2 Image">
+            <p>Insert project description here.</p>
+        </div>
+
+        <div class="project">
+            <h3>Project 3</h3>
+            <img src="project3-image.jpg" alt="Project 3 Image">
+            <p>Insert project description here.</p>
+        </div>
+
     </section>
 
-    <section>
+    <section id="contact">
         <h2>Contact</h2>
-        <p>You can reach me via <a href="mailto:your-email@example.com">email</a> or visit my <a href="https://www.linkedin.com/in/yourlinkedinprofile">LinkedIn</a>.</p>
+        <p>Insert contact information here (e.g., email, phone, LinkedIn, etc.).</p>
     </section>
 
     <footer>
-        <p>&copy; 2024 Maksim Stroikin. All rights reserved.</p>
+        <p>Portfolio by Maksim Stroikin</p>
     </footer>
 
 </body>
