--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
 </head>
 <body>
 
-    <header>
-        <h1>Welcome to My Portfolio</h1>
-        <p>This is a showcase of my projects.</p>
-    </header>
+    <section id="about-me">
+    <h2>About Me</h2>
+    <img src="about-me-image.jpg" alt="A photo of Maksim Stroikin" style="max-width: 100%; height: auto; border-radius: 10px;">
+    <p>Insert description here.</p>
+    </section>
 
     <section id="about-me">
         <h2>About Me</h2>
@@ -90,6 +91,10 @@
         <p>Insert contact information here (e.g., email, phone, LinkedIn, etc.).</p>
     </section>
 
+    #contact {
+    padding-bottom: 40px; /* Adjust this value as needed */
+}
+    
     <footer>
         <p>Portfolio by Maksim Stroikin</p>
     </footer>
