--- a/index.html
+++ b/index.html
@@ -94,28 +94,28 @@
 
     <section id="about-me">
         <h2>About Me</h2>
-        <img src="about-me-image.jpg" alt="A photo of Maksim Stroikin" style="max-width: 100%; height: auto; border-radius: 10px;">
+        <img src="images/600x400.png" alt="A photo of Maksim Stroikin" style="max-width: 100%; height: auto; border-radius: 10px;">
         <p>I am a second-year engineering systems and computing student with a passion for embedded systems and programming.</p>
     </section>
 
-    <section id="projects" class="projects">
+    <section id="images/600x400.png" class="projects">
         <h2>Projects</h2>
         
         <div class="project">
             <h3>Project 1</h3>
-            <img src="project1-image.jpg" alt="Project 1 Image">
+            <img src="images/600x400.png" alt="Project 1 Image">
             <p>Insert project description here.</p>
         </div>
 
         <div class="project">
             <h3>Project 2</h3>
-            <img src="project2-image.jpg" alt="Project 2 Image">
+            <img src="images/600x400.png" alt="Project 2 Image">
             <p>Insert project description here.</p>
         </div>
 
         <div class="project">
             <h3>Project 3</h3>
-            <img src="project3-image.jpg" alt="Project 3 Image">
+            <img src="images/600x400.png" alt="Project 3 Image">
             <p>Insert project description here.</p>
         </div>
 
