--- a/index.html
+++ b/index.html
@@ -18,30 +18,6 @@
             padding: 20px;
             text-align: center;
         }
-        nav {
-            background-color: #444;
-            color: white;
-            overflow: hidden;
-            padding: 10px 0;
-        }
-        nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-        }
-        nav ul li {
-            margin: 0 15px;
-        }
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        nav ul li a:hover {
-            text-decoration: underline;
-        }
         section {
             padding: 20px;
             margin: 20px;
@@ -58,12 +34,35 @@
         .projects .project {
             margin-bottom: 20px;
         }
-        .project img {
-            width: 100%;
-            height: auto;
-        }
         .project h3 {
             margin-top: 10px;
+        }
+        .image-container {
+            position: relative;
+            max-width: 300px;
+            margin: auto;
+        }
+        .image-container img {
+            width: 100%;
+            height: auto;
+            display: block;
+            border-radius: 10px;
+        }
+        .arrow {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            font-size: 30px;
+            color: #333;
+            background-color: rgba(255, 255, 255, 0.7);
+            padding: 10px;
+            cursor: pointer;
+        }
+        .arrow-left {
+            left: 10px;
+        }
+        .arrow-right {
+            right: 10px;
         }
         .contact a {
             color: #1a73e8;
@@ -71,9 +70,6 @@
         }
         .contact a:hover {
             text-decoration: underline;
-        }
-        #contact {
-            padding-bottom: 40px; /* Adds space at the bottom of the Contact section */
         }
     </style>
 </head>
@@ -84,38 +80,39 @@
         <p>This is a showcase of my projects.</p>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="#about-me">About Me</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-
-    <section id="about-me">
-        <h2>About Me</h2>
-        <img src="images/600x400.png" alt="A photo of Maksim Stroikin" style="max-width: 100%; height: auto; border-radius: 10px;">
-        <p>I am a second-year engineering systems and computing student with a passion for embedded systems and programming.</p>
-    </section>
-
-    <section id="images/600x400.png" class="projects">
+    <section id="projects" class="projects">
         <h2>Projects</h2>
-        
+
+        <!-- Project 1 -->
         <div class="project">
             <h3>Project 1</h3>
-            <img src="images/600x400.png" alt="Project 1 Image">
+            <div class="image-container" id="project1-images">
+                <img src="project1-image1.jpg" alt="Project 1 Image" class="project-image">
+                <span class="arrow arrow-left" onclick="changeImage('project1', -1)">&#10094;</span>
+                <span class="arrow arrow-right" onclick="changeImage('project1', 1)">&#10095;</span>
+            </div>
             <p>Insert project description here.</p>
         </div>
 
+        <!-- Project 2 -->
         <div class="project">
             <h3>Project 2</h3>
-            <img src="images/600x400.png" alt="Project 2 Image">
+            <div class="image-container" id="project2-images">
+                <img src="project2-image1.jpg" alt="Project 2 Image" class="project-image">
+                <span class="arrow arrow-left" onclick="changeImage('project2', -1)">&#10094;</span>
+                <span class="arrow arrow-right" onclick="changeImage('project2', 1)">&#10095;</span>
+            </div>
             <p>Insert project description here.</p>
         </div>
 
+        <!-- Project 3 -->
         <div class="project">
             <h3>Project 3</h3>
-            <img src="images/600x400.png" alt="Project 3 Image">
+            <div class="image-container" id="project3-images">
+                <img src="project3-image1.jpg" alt="Project 3 Image" class="project-image">
+                <span class="arrow arrow-left" onclick="changeImage('project3', -1)">&#10094;</span>
+                <span class="arrow arrow-right" onclick="changeImage('project3', 1)">&#10095;</span>
+            </div>
             <p>Insert project description here.</p>
         </div>
 
@@ -123,14 +120,42 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: maksim.stroikin@example.com</p>
-        <p>Phone: (123) 456-7890</p>
-        <p><a href="https://www.linkedin.com/in/maksim-stroikin/">LinkedIn</a></p>
+        <p>Insert contact information here (e.g., email, phone, LinkedIn, etc.).</p>
     </section>
 
     <footer>
         <p>Portfolio by Maksim Stroikin</p>
     </footer>
+
+    <script>
+        // Function to change images
+        function changeImage(projectId, direction) {
+            const images = document.querySelectorAll(`#${projectId}-images img`);
+            let currentImageIndex = Array.from(images).findIndex(img => img.style.display !== 'none');
+            
+            // If no visible image, default to the first image
+            if (currentImageIndex === -1) {
+                currentImageIndex = 0;
+            }
+
+            const totalImages = images.length;
+            currentImageIndex = (currentImageIndex + direction + totalImages) % totalImages;
+
+            // Hide all images
+            images.forEach(img => img.style.display = 'none');
+
+            // Show the next image
+            images[currentImageIndex].style.display = 'block';
+        }
+
+        // Initialize by showing only the first image of each project
+        document.querySelectorAll('.image-container').forEach(container => {
+            const images = container.querySelectorAll('img');
+            images.forEach((img, index) => {
+                if (index !== 0) img.style.display = 'none';
+            });
+        });
+    </script>
 
 </body>
 </html>
