--- a/index.html
+++ b/index.html
@@ -287,6 +287,11 @@
         });
     </script>
 
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+        <p>This is a showcase of my projects.</p>
+    </header>
+    
     <nav>
         <ul>
             <li><a href="#about-me">About Me</a></li>
