--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             var project4Description = 
             `In my Engineering Design I course, I worked in a 5 member multidisciplinary team to design and program an autonomous 
             vehicle. By using a Meccano kit, electric powered motors as well as Arduino and ATMega328 microcontroller we constructed
-            the vehicle and I implemented control functionality by utilizing my  PCL programming abilities. By identifying and 
+            the vehicle and I implemented control functionality by utilizing my  PLC programming abilities. By identifying and 
             addressing inefficiencies in the design, I improved the vehicle's speed by over 50%, completing the project seven days 
             ahead of schedule.  This was achieved through maintaining effective communication, organization, and effective 
             coordination allowing each team member to utilize their strengths accordingly. As a result, our vehicle was able to
